docs/tests/nameres/control_flow/invalid/SwitchOutOfScope.src
// Invalid 

fn void main() {
    let int i = 0;
    switch (i) {
        case 1 {
            let int j = 0;
        }
    }

    switch (i) {
        case 1 {
            j = 0;
        }
    }
}